# hpp-kwsio

./: CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  kwsIO.pc.in
doc/: Makefile.am  kwsIO.dox.in  package.dox.in
doc/additionalDoc/: kwsPlus.h
include/: Makefile.am  kwsioConfig.h  kwsioDevice.h  kwsioInterface.h  kwsioMat.h  kwsioPath.h
include/hpp/kwsio/: configuration.hh  device.hh  interface.hh  mat.hh  path.hh
src/: CMakeLists.txt  Makefile.am  config.cc  device.cc  kwsioConfig.cpp  kwsioDevice.cpp  kwsioMat.cpp  kwsioPath.cpp  mat.cc  path.cc
